# refer

./: Cargo.toml  LICENSE  README.md
src/: binary_tree.rs  coders.rs  dispatcher.rs  distance.rs  field.rs  graph.rs  graphv2.rs  gravity.rs  lib.rs  property.rs  storage.rs  time.rs  util.rs
src/collection/: mod.rs  owned.rs  util.rs  vec.rs
src/collection/permit/: mod.rs  permit.rs  slot.rs
src/collections/: vec.rs
src/components/: alloc.rs  alloc_box.rs  inline_shell.rs  inline_vec.rs  mod.rs
src/container/: all.rs  chunked.rs  data.rs  delegate.rs  item.rs  layer.rs  mod.rs  pair.rs  table.rs  vec.rs
src/core/: allocator.rs  any.rs  any_ref.rs  coll_mut.rs  coll_polly.rs  coll_ref.rs  collection.rs  container.rs  context.rs  edge.rs  entity.rs  entry.rs  error.rs  item.rs  key.rs  layer.rs  locality.rs  mod.rs  path.rs  polly.rs  reference.rs  shell.rs  util.rs
src/core/container/: leaf.rs  mod.rs  region.rs  ty.rs
src/core/item/: any.rs  dym.rs  mod.rs  old_item.rs  old_shell.rs  traits.rs
src/core/iter/: isolate.rs  iterator.rs  mod.rs  order.rs  process.rs  start.rs
src/core/key/: container.rs  context_path.rs  delta.rs  grc.rs  index.rs  key.rs  key_path.rs  locality_key.rs  locality_path.rs  mini.rs  mod.rs  multi.rs  owned.rs  path.rs  prefix.rs  reserved.rs  sub.rs
src/core/permit/: add.rs  any.rs  exclusive.rs  lifetime.rs  mod.rs  path.rs  remove.rs  slot.rs  slot_split.rs  subject.rs  ty.rs  type_split.rs
src/core/permit/access/: all.rs  key.rs  key_permit.rs  keys.rs  mod.rs  path.rs  ty.rs  type_permit.rs  types.rs
src/core/slot/: any_slot.rs  any_unsafe.rs  dyn_slot.rs  mod.rs  mut_any.rs  mut_any_item.rs  mut_any_shell.rs  mut_item.rs  mut_shell.rs  mut_slot.rs  permit.rs  ref_any.rs  ref_any_item.rs  ref_any_shell.rs  ref_item.rs  ref_shell.rs  ref_slot.rs  slot.rs  universal.rs  universal_unsafe.rs  unsafe_slot.rs
src/item/: addon.rs  attach.rs  data.rs  drain.rs  edge.rs  itemize.rs  mod.rs  own.rs  tagged_edge.rs  unit.rs  variant.rs  vec_edges.rs  vertice.rs
src/items/: edge.rs  mod.rs  vertice.rs
src/model/: graph.rs  mod.rs  tagged_graph.rs
src/shell/: mod.rs  no_shell.rs  shard_shell.rs  vec_shell.rs
src/util/: mod.rs  ord_iter.rs  shard_alloc.rs  shard_box.rs  shard_vec.rs
