[package]
authors = ["Kruno Tomola Fabro"]
categories = ["data-structures", "memory-management"]
description = "A foundational library for building graphs out of structs"
edition = "2021"
keywords = ["graph", "container", "reference", "management"]
license = "MIT"
name = "refer"
publish = false
readme = "README.md"
repository = "https://github.com/ktff/refer"
version = "0.3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getset = "0.1.2"
log = "0.4.17"
modular-bitfield = {version = "0.11.2", optional = true}

[dev-dependencies]
rand = "*"

[features]
base_u128 = []
base_u64 = []
default = ["base_u64", "shard"]
shard = ["modular-bitfield"]
