[package]
authors = ["Kruno Tomola Fabro"]
categories = ["data-structures", "memory-management"]
description = "A foundational library for building graphs out of structs"
edition = "2021"
keywords = ["graph", "container", "reference", "management"]
license = "MIT"
name = "refer"
publish = false
readme = "README.md"
repository = "https://github.com/ktff/refer"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
log = "0.4.17"
modular-bitfield = "0.11.2"
parking_lot = "0.12.3"
static_assertions = "1.1.0"

[dev-dependencies]
rand = "*"
